# delegate

./: .gitignore  README.md  pyproject.toml
prompts/: compaction.md  system.md
src/delegate/: agent.py  context.py  main.py  tools.py  ui.py
src/miniagent/: agent.py  main.py  ui.py
src/ollama_agent/: context.py  main.py
