[project]
name = "delegate"
version = "0.1.0"
description = "Lightweight coding agent with OpenAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "typer",
    "rich",
    "questionary",
    "prompt-toolkit",
    "pyfiglet>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
delegate = "delegate.main:app"
